force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>Stores employee profile records and tracking of annual leave balances.</description>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>