force-app/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Job title and organizational role.</description>
    <label>Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>