force-app/main/default/objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Official work email address used for notifications.</description>
    <label>Work Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>