force-app/main/default/objects/Employee__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>Unique organizational identifier for the employee.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter unique Employee ID (e.g., EMP-1001).</inlineHelpText>
    <label>Employee ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>