force-app/main/default/objects/Employee__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description>Current employment lifecycle status.</description>
    <label>Employment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>On Leave</fullName><default>false</default><label>On Leave</label></value>
            <value><fullName>Resigned</fullName><default>false</default><label>Resigned</label></value>
            <value><fullName>Terminated</fullName><default>false</default><label>Terminated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>