force-app/main/default/objects/Employee__c/fields/Remaining_Earned_Leave__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Earned_Leave__c</fullName>
    <description>Calculated available earned leave balance.</description>
    <formula>BLANKVALUE(Total_Earned_Leave__c, 0) - BLANKVALUE(Used_Earned_Leave__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Earned Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>