force-app/main/default/objects/Employee__c/fields/Remaining_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Sick_Leave__c</fullName>
    <description>Calculated available sick leave balance.</description>
    <formula>BLANKVALUE(Total_Sick_Leave__c, 0) - BLANKVALUE(Used_Sick_Leave__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Sick Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>