force-app/main/default/objects/Employee__c/fields/Total_Casual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Casual_Leave__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Total allocated annual casual leave quota.</description>
    <label>Total Casual Leave</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>