force-app/main/default/objects/Employee__c/fields/Total_Earned_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_Leave__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Total allocated annual earned/privileged leave quota.</description>
    <label>Total Earned Leave</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>