force-app/main/default/objects/Employee__c/fields/Total_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Sick_Leave__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Total allocated annual sick leave quota.</description>
    <label>Total Sick Leave</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>