force-app/main/default/objects/Employee__c/fields/Used_Earned_Leave__c.field-meta.xml
<CustomField>
    <fullName>Used_Earned_Leave__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Earned leave days consumed year-to-date upon final approval.</description>
    <label>Used Earned Leave</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>